Ensure plots are not cut off on display page (#975)
Address #728

Ensure that the bottom of plots are not cut off on individual
simulation result display page.

* Use JS to make responsive resize better for plots

* Reduce padding on captions for plots so that one line captions don't invoke a scrollbar

--- a/css/chimad.css
+++ b/css/chimad.css
@@ -163,22 +163,24 @@ table.striped tbody tr:nth-child(2n+1) {
 }
 
 .card.small .card-image {
-    max-height: 70%;
+    max-height: 80%;
+    min-height: 80%;
+    overflow: auto;
 }
 
 .card.small .card-content.scroll {
     overflow: auto;
-    max-height: 30%;
+    min-height: 20%;
+    max-height: 20%;
+    padding: 10px;
 }
 
-
+.video-container {
+    overflow: visible;
+}
 
 .materialboxed.responsive-img.initialized {
     background-color: white;
-}
-
-.card.small .card-content {
-    max-height: 95%;
 }
 
 .circle {
